# fpmcp

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  benchmark_pdf_libs.py  fastmcp.json  find_pdf_article.py  justfile  pyproject.toml  quiz_pdf_search.py  serve.py  test_pdf_extraction.py
.claude/: CLAUDE.md
.claude/commands/: ultra-miniize.md  ultra-minimize.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: fulltext_demo.py  mcp_query_demo.py  multiple_queries_demo.py
fpmcp/: __init__.py  __main__.py  article_id.py  europmc.py  fulltext.py  http.py  server.py  util.py
fpmcp/crossref/: __init__.py  utils.py
fpmcp/europmc/: __init__.py  models.py  utils.py
fpmcp/fpbase/: query.py
fpmcp/unpaywall/: __init__.py  utils.py
src/fpmcp/: __init__.py  __main__.py  server.py
tests/: test_article_id.py  test_europmc.py  test_fpmcp.py  test_fulltext.py  test_fulltext_pdf.py  test_server.py
