# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# https://peps.python.org/pep-0621/
[project]
name = "fpmcp"
dynamic = ["version"]
description = "MCP server for fpbase research"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.13.0.2",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
]


[project.urls]
homepage = "https://github.com/tlambert03/fpmcp"
repository = "https://github.com/tlambert03/fpmcp"

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
dev = [
    { include-group = "test" },
    "datamodel-code-generator>=0.35.0",
    "ipython>=8.18.1",
    "prek>=0.2.13",
    "rich>=14.2.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]

[tool.uv.sources]
fpmcp = { workspace = true }

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["fpmcp"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
"docs/*.py" = ["D", "A"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

# https://docs.pytest.org/
[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "8.0"
addopts = ["--color=yes"]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ty.environment]
python-version = "3.12"

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "raise AssertionError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["fpmcp"]

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
    "uv.lock",
]

# https://github.com/crate-ci/typos/blob/master/docs/reference.md
[tool.typos.default]
extend-ignore-identifiers-re = []
